Buildings and lots

--- a/src/scripts/data/assets/overrides.yaml
+++ b/src/scripts/data/assets/overrides.yaml
@@ -4,6 +4,10 @@ github/0xC0000054/sc4-auto-save:
   packageId: null-45/auto-save
   variantId: default
 
+github/0xC0000054/sc4-bulldoze-extensions:
+  packageId: null-45/bulldoze-extensions
+  variantId: default
+
 github/0xC0000054/sc4-city-date-sync:
   packageId: null-45/city-date-sync
   variantId: default
@@ -2563,6 +2567,10 @@ simtropolis/36544-coco_e-pyeonhansesang_apt:
     '204396':
       packageId: cococity/coco-pyeonhansesang-apartment
       variantId: darknite
+
+simtropolis/36571-bulldoze-extensions-dll-plugin:
+  packageId: null-45/bulldoze-extensions
+  variantId: default
 
 simtropolis/4049-vda-langeraar-geerweg-31:
   packageId: vanderaap/langeraar-geerweg-31
