--- a/src/scripts/data/assets/simtropolis/107-utilities.yaml
+++ b/src/scripts/data/assets/simtropolis/107-utilities.yaml
@@ -150,7 +150,7 @@ assets:
     timestamp: 2024-09-13T12:22:00.820Z
     uncompressed: 764632
     url: https://community.simtropolis.com/files/file/11329-pda-chicago-water-tower/
-    version: "1.0"
+    version: '1.0'
   simtropolis/11393:
     assetId: simtropolis/11393-hydrogen-powerplant-6x6
     authors:
@@ -716,7 +716,7 @@ assets:
     timestamp: 2024-09-13T12:22:00.820Z
     uncompressed: 641819
     url: https://community.simtropolis.com/files/file/14716-washburn-water-tower/
-    version: "1.0"
+    version: '1.0'
   simtropolis/14929:
     assetId: simtropolis/14929-lightning-power-plant-version2
     authors:
@@ -783,7 +783,7 @@ assets:
   simtropolis/15242:
     assetId: simtropolis/15242-powerful-windmill
     authors:
-      - "**matty**"
+      - '**matty**'
     category: 107-utilities
     lastModified: 2006-03-12T19:41:00.000Z
     name: Powerful Windmill
@@ -1756,7 +1756,7 @@ assets:
     timestamp: 2024-08-15T14:29:31.994Z
     uncompressed: 59460
     url: https://community.simtropolis.com/files/file/19458-kaos-rusty-generator/
-    version: "1.0"
+    version: '1.0'
   simtropolis/19493:
     assetId: simtropolis/19493-mars-water-tower-15
     authors:
@@ -2155,7 +2155,7 @@ assets:
     timestamp: 2024-09-13T12:22:00.820Z
     uncompressed: 311685
     url: https://community.simtropolis.com/files/file/21092-nexis-mega-generator-i/
-    version: "1.0"
+    version: '1.0'
   simtropolis/2112:
     assetId: simtropolis/2112-demon-power-machine
     authors:
@@ -2263,7 +2263,7 @@ assets:
     timestamp: 2024-09-13T12:22:00.820Z
     uncompressed: 799030
     url: https://community.simtropolis.com/files/file/21618-rsp-vukovar-water-tower/
-    version: "1.0"
+    version: '1.0'
   simtropolis/2166:
     assetId: simtropolis/2166-small-reservoir
     authors:
@@ -2537,7 +2537,7 @@ assets:
   simtropolis/23485:
     assetId: simtropolis/23485-my-4-bat-pack
     authors:
-      - "123452"
+      - '123452'
     category: 107-utilities
     lastModified: 2010-03-07T14:45:52.000Z
     name: My 4 B.A.T. Pack
@@ -3430,11 +3430,11 @@ assets:
     timestamp: 2024-10-15T15:05:51.656Z
     uncompressed: 50510
     url: https://community.simtropolis.com/files/file/27672-mattb325-cell-phone-tower/
-    version: "1.0"
+    version: '1.0'
   simtropolis/27783:
     assetId: simtropolis/27783-an-old-large-water-tower
     authors:
-      - "7499275"
+      - '7499275'
     category: 107-utilities
     lastModified: 2012-07-01T23:16:47.000Z
     name: An old large water tower
@@ -3626,7 +3626,7 @@ assets:
       - Bipin
     category: 107-utilities
     lastModified: 2013-07-19T00:59:06.000Z
-    name: "Future Project:  Circuitry Relay Tower"
+    name: 'Future Project:  Circuitry Relay Tower'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2013/thumb-7f1ca81ee1b827bbbc3f3dbb8d8c5666-fptowernight.png
     url: https://community.simtropolis.com/files/file/28869-future-project-circuitry-relay-tower/
   simtropolis/28920:
@@ -3671,7 +3671,7 @@ assets:
       - Huston
     category: 107-utilities
     lastModified: 2013-11-03T11:37:29.000Z
-    name: "METMW: Mast-One Station"
+    name: 'METMW: Mast-One Station'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2013/thumb-d521a6ce0636e90d379ad12947bafb2e-metmwhustonshowcasestructuremastonestation.jpg
     url: https://community.simtropolis.com/files/file/29034-metmw-mast-one-station/
   simtropolis/2913:
@@ -3767,7 +3767,7 @@ assets:
   simtropolis/29949:
     assetId: simtropolis/29949-nearly-invisible-underwater-power-connection-lots
     authors:
-      - "11241036"
+      - '11241036'
     category: 107-utilities
     lastModified: 2014-10-15T10:09:36.000Z
     name: (Nearly) Invisible Underwater Power Connection Lots
@@ -3887,7 +3887,7 @@ assets:
       - Ro-Bo
     category: 107-utilities
     lastModified: 2016-05-06T22:03:41.000Z
-    name: "RB Offshore Power Plants: PowerBuoys"
+    name: 'RB Offshore Power Plants: PowerBuoys'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2016_05/Power-Buoy.thumb.jpg.7d4f558b8874b43a34df0c54630d2022.jpg
     url: https://community.simtropolis.com/files/file/31048-rb-offshore-power-plants-powerbuoys/
   simtropolis/31141:
@@ -3926,7 +3926,7 @@ assets:
     timestamp: 2024-08-15T14:29:31.994Z
     uncompressed: 93992
     url: https://community.simtropolis.com/files/file/31217-transformer-substation/
-    version: "1.0"
+    version: '1.0'
   simtropolis/31227:
     assetId: simtropolis/31227-water-storage-tank
     authors:
@@ -3951,7 +3951,7 @@ assets:
       - metarvo
     category: 107-utilities
     lastModified: 2016-08-27T13:20:20.000Z
-    name: "Metarvo’s Power Pole Pack (P3) Set 0: Texas Steel V-Tower"
+    name: 'Metarvo’s Power Pole Pack (P3) Set 0: Texas Steel V-Tower'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2016_08/p3pic069.thumb.jpg.c9e5db933c3c48db438a65ac1439bf68.jpg
     url: https://community.simtropolis.com/files/file/31264-metarvo%E2%80%99s-power-pole-pack-p3-set-0-texas-steel-v-tower/
   simtropolis/31265:
@@ -3960,7 +3960,7 @@ assets:
       - metarvo
     category: 107-utilities
     lastModified: 2016-08-27T13:22:37.000Z
-    name: "Metarvo’s Power Pole Pack (P3) Set 1: Wood H-Frame"
+    name: 'Metarvo’s Power Pole Pack (P3) Set 1: Wood H-Frame'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2016_08/p3pic071.thumb.jpg.6be6d115b775e5f83421bd03e59d1eaa.jpg
     url: https://community.simtropolis.com/files/file/31265-metarvo%E2%80%99s-power-pole-pack-p3-set-1-wood-h-frame/
   simtropolis/31267:
@@ -4019,7 +4019,7 @@ assets:
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_10_2003/thumb-b2559aeb2202743482e3bdc02510285b-BuggiMarkX.jpg
     uncompressed: 43673
     url: https://community.simtropolis.com/files/file/313-buggi-mark-x-windblaster/
-    version: "1.0"
+    version: '1.0'
   simtropolis/31302:
     assetId: simtropolis/31302-enercon-e82-wind-turbine
     authors:
@@ -4250,7 +4250,7 @@ assets:
   simtropolis/31927:
     assetId: simtropolis/31927-wertstoffsammelstelle-small-public-recycling-site
     authors:
-      - "11241036"
+      - '11241036'
     category: 107-utilities
     lastModified: 2017-09-04T20:45:14.000Z
     name: Wertstoffsammelstelle (Small Public Recycling Site)
@@ -4481,7 +4481,7 @@ assets:
     timestamp: 2024-08-15T14:29:31.994Z
     uncompressed: 1154569
     url: https://community.simtropolis.com/files/file/32790-sm2-hv-transformer/
-    version: "2.0"
+    version: '2.0'
   simtropolis/32800:
     assetId: simtropolis/32800-sm2-cold-fusion-reactors
     authors:
@@ -5094,7 +5094,7 @@ assets:
     timestamp: 2024-09-13T12:22:00.820Z
     uncompressed: 177255
     url: https://community.simtropolis.com/files/file/3878-shmails-martian-small-water-pump/
-    version: "1.0"
+    version: '1.0'
   simtropolis/3894:
     assetId: simtropolis/3894-shmails-martian-large-pumping-facility
     authors:
@@ -5628,4 +5628,4 @@ assets:
     url: https://community.simtropolis.com/files/file/983-hydro-electric-dam/
 
 meta:
-  timestamp: 2024-11-19T06:11:28.140Z
+  timestamp: 2024-11-26T16:10:02.088Z
