--- a/src/scripts/data/assets/simtropolis/111-automata.yaml
+++ b/src/scripts/data/assets/simtropolis/111-automata.yaml
@@ -378,7 +378,7 @@ assets:
     timestamp: 2024-09-13T12:22:00.820Z
     uncompressed: 5118348
     url: https://community.simtropolis.com/files/file/12973-european-car-replacement-mod/
-    version: "1.0"
+    version: '1.0'
   simtropolis/13217:
     assetId: simtropolis/13217-cs-automata-order-107
     authors:
@@ -736,7 +736,7 @@ assets:
     timestamp: 2024-09-13T12:22:00.820Z
     uncompressed: 2876472
     url: https://community.simtropolis.com/files/file/14400-european-cars-automata-and-family-props-new-instances/
-    version: "1.0"
+    version: '1.0'
   simtropolis/14421:
     assetId: simtropolis/14421-s12-light-rail-company-new-york-tram
     authors:
@@ -2246,7 +2246,7 @@ assets:
       - simtropolis
     category: 111-automata
     lastModified: 2004-04-10T23:00:00.000Z
-    name: "Big Red Fish's Train Set #1"
+    name: 'Big Red Fish''s Train Set #1'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_04_2004/thumb-4776878bd13bdf111394279a3587dd49-default.jpg
     url: https://community.simtropolis.com/files/file/21369-big-red-fishs-train-set-1/
   simtropolis/21468:
@@ -2867,7 +2867,7 @@ assets:
       - Elric888
     category: 111-automata
     lastModified: 2009-12-30T00:40:31.000Z
-    name: "Classic VW Beetle Pack 3: Baja Bugs"
+    name: 'Classic VW Beetle Pack 3: Baja Bugs'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2009/thumb-231d68ac253ed570f349795c2d394d8b-bajapreview.jpg
     url: https://community.simtropolis.com/files/file/23073-classic-vw-beetle-pack-3-baja-bugs/
   simtropolis/23074:
@@ -3083,7 +3083,7 @@ assets:
       - hockeygoalie35
     category: 111-automata
     lastModified: 2010-01-28T16:08:27.000Z
-    name: "*Drivable* 737"
+    name: '*Drivable* 737'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_01_2010/thumb-a3d160c25ee7825637e9d72d81fbdd52-fireplane.jpg
     url: https://community.simtropolis.com/files/file/23214-drivable-737/
   simtropolis/23218:
@@ -4019,7 +4019,7 @@ assets:
       - Ceafus 88
     category: 111-automata
     lastModified: 2011-06-30T22:54:46.000Z
-    name: "TEAM: Max Truck"
+    name: 'TEAM: Max Truck'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_06_2011/thumb-c1a6edfdd3ee5ede2634cad941d10208-team_max_truck_mosaic22.jpg
     url: https://community.simtropolis.com/files/file/26429-team-max-truck/
   simtropolis/26442:
@@ -4046,7 +4046,7 @@ assets:
       - jwong
     category: 111-automata
     lastModified: 2011-07-31T18:59:05.000Z
-    name: "Jwong's Automata Mod - Part 1: Low Wealth Cheap Sedans"
+    name: 'Jwong''s Automata Mod - Part 1: Low Wealth Cheap Sedans'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2011/thumb-614bf5cbb2c06a47bd408e6bca6c2bb6-sedans.png
     url: https://community.simtropolis.com/files/file/26584-jwongs-automata-mod-part-1-low-wealth-cheap-sedans/
   simtropolis/26593:
@@ -4145,7 +4145,7 @@ assets:
       - paeng
     category: 111-automata
     lastModified: 2011-11-30T19:43:38.000Z
-    name: "Paeng's FiRE AddOn: Action Lots"
+    name: 'Paeng''s FiRE AddOn: Action Lots'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2011/thumb-1c227b563317555beafbe818f78f533a-fire-addon_plex_480.jpg
     url: https://community.simtropolis.com/files/file/27015-paengs-fire-addon-action-lots/
   simtropolis/2705:
@@ -4226,7 +4226,7 @@ assets:
       - Klyte45
     category: 111-automata
     lastModified: 2012-04-01T21:22:55.000Z
-    name: "SP Busses v7: Flunight Articulated Repaint"
+    name: 'SP Busses v7: Flunight Articulated Repaint'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_10_2014/thumb-41c04991a8434d9da26d2d535ac27963-0.jpg
     url: https://community.simtropolis.com/files/file/27425-sp-busses-v7-flunight-articulated-repaint/
   simtropolis/27433:
@@ -4323,7 +4323,7 @@ assets:
     timestamp: 2024-08-13T14:26:32.086Z
     uncompressed: 68756
     url: https://community.simtropolis.com/files/file/27627-london-taxis-cab/
-    version: "1.0"
+    version: '1.0'
   simtropolis/27632:
     assetId: simtropolis/27632-2012-ford-transit-nyc-taxis-cab
     authors:
@@ -4987,7 +4987,7 @@ assets:
       - apeek
     category: 111-automata
     lastModified: 2014-03-24T17:00:00.000Z
-    name: "Automata Generators Vol1: Sea & Sky"
+    name: 'Automata Generators Vol1: Sea & Sky'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_03_2014/thumb-97efe80d663df17059805a9a41baceb2-cargo-gen.jpg
     url: https://community.simtropolis.com/files/file/29364-automata-generators-vol1-sea-sky/
   simtropolis/29368:
@@ -5677,7 +5677,7 @@ assets:
   simtropolis/32625:
     assetId: simtropolis/32625-chinese-train
     authors:
-      - "7096371"
+      - '7096371'
     category: 111-automata
     lastModified: 2018-11-26T12:09:51.000Z
     name: Chinese Train
@@ -5686,7 +5686,7 @@ assets:
   simtropolis/32629:
     assetId: simtropolis/32629-hxd2-train
     authors:
-      - "7096371"
+      - '7096371'
     category: 111-automata
     lastModified: 2018-11-26T14:50:28.000Z
     name: HXD2 Train
@@ -5695,7 +5695,7 @@ assets:
   simtropolis/32641:
     assetId: simtropolis/32641-rockets
     authors:
-      - "7096371"
+      - '7096371'
     category: 111-automata
     lastModified: 2018-12-03T04:58:52.000Z
     name: Rockets
@@ -6028,7 +6028,7 @@ assets:
   simtropolis/34216:
     assetId: simtropolis/34216-cr400af-train
     authors:
-      - "7096371"
+      - '7096371'
     category: 111-automata
     lastModified: 2021-03-06T09:38:18.000Z
     name: CR400AF Train
@@ -6037,7 +6037,7 @@ assets:
   simtropolis/34219:
     assetId: simtropolis/34219-cr400bf-train
     authors:
-      - "7096371"
+      - '7096371'
     category: 111-automata
     lastModified: 2021-03-06T09:33:04.000Z
     name: CR400BF Train
@@ -6046,7 +6046,7 @@ assets:
   simtropolis/34223:
     assetId: simtropolis/34223-hxd1d-train
     authors:
-      - "7096371"
+      - '7096371'
     category: 111-automata
     lastModified: 2021-03-05T14:34:57.000Z
     name: HXD1D Train
@@ -6763,4 +6763,4 @@ assets:
     url: https://community.simtropolis.com/files/file/569-the-cow/
 
 meta:
-  timestamp: 2024-11-19T06:11:28.140Z
+  timestamp: 2024-11-26T16:10:02.088Z
