--- a/src/scripts/data/assets/simtropolis/33-plex-custom-lots-mods.yaml
+++ b/src/scripts/data/assets/simtropolis/33-plex-custom-lots-mods.yaml
@@ -51,7 +51,7 @@ assets:
     timestamp: 2024-07-29T09:55:36.596Z
     uncompressed: 557992
     url: https://community.simtropolis.com/files/file/11001-peg-trail-parks-iii/
-    version: "1.0"
+    version: '1.0'
   simtropolis/11054:
     assetId: simtropolis/11054-peg-seasonal-trail-parks-v305
     authors:
@@ -86,7 +86,7 @@ assets:
     timestamp: 2024-07-29T09:55:36.596Z
     uncompressed: 1315492
     url: https://community.simtropolis.com/files/file/11083-peg-stream-kit-ii-v205/
-    version: "1.0"
+    version: '1.0'
   simtropolis/11097:
     assetId: simtropolis/11097-peg-christmas-development-kit
     authors:
@@ -109,7 +109,7 @@ assets:
     timestamp: 2024-08-22T13:06:29.434Z
     uncompressed: 426058
     url: https://community.simtropolis.com/files/file/11097-peg-christmas-development-kit/
-    version: "1.0"
+    version: '1.0'
   simtropolis/11115:
     assetId: simtropolis/11115-peg-seasonal-lot
     authors:
@@ -233,7 +233,7 @@ assets:
     timestamp: 2024-07-29T09:55:36.596Z
     uncompressed: 451037
     url: https://community.simtropolis.com/files/file/11688-peg-tennis-park/
-    version: "1.0"
+    version: '1.0'
   simtropolis/11695:
     assetId: simtropolis/11695-peg-presents-charas-bt-records
     authors:
@@ -390,7 +390,7 @@ assets:
     timestamp: 2024-07-24T12:13:33.510Z
     uncompressed: 1339354
     url: https://community.simtropolis.com/files/file/12329-peg-pond-kit-ii-deluxe-edition-v206/
-    version: "1.0"
+    version: '1.0'
   simtropolis/12330:
     assetId: simtropolis/12330-peg-pond-kit-transparent-patch
     authors:
@@ -435,7 +435,7 @@ assets:
     timestamp: 2024-07-29T09:55:36.596Z
     uncompressed: 1338721
     url: https://community.simtropolis.com/files/file/12426-peg-stream-kit-deluxe-edition/
-    version: "1.0"
+    version: '1.0'
   simtropolis/12540:
     assetId: simtropolis/12540-peg-mariners-memorial
     authors:
@@ -525,7 +525,7 @@ assets:
     timestamp: 2024-08-22T13:06:29.434Z
     uncompressed: 2641545
     url: https://community.simtropolis.com/files/file/13096-peg-the-great-lighthouse-of-alexandria/
-    version: "1.0"
+    version: '1.0'
   simtropolis/13172:
     assetId: simtropolis/13172-peg-fountain-pack-1
     authors:
@@ -906,7 +906,7 @@ assets:
     timestamp: 2024-08-06T05:36:11.524Z
     uncompressed: 122847
     url: https://community.simtropolis.com/files/file/31162-paengs-streetside-diagonal-parking-ssdp/
-    version: "1.0"
+    version: '1.0'
   simtropolis/4513:
     assetId: simtropolis/4513-peg-old-west-prop-pack-205
     authors:
@@ -940,7 +940,7 @@ assets:
     timestamp: 2024-08-05T15:27:36.285Z
     uncompressed: 761173
     url: https://community.simtropolis.com/files/file/4515-peg-seasonal-woods-v206b/
-    version: "1.0"
+    version: '1.0'
   simtropolis/4516:
     assetId: simtropolis/4516-peg-arizona-memorial-v205
     authors:
@@ -1008,7 +1008,7 @@ assets:
     timestamp: 2024-08-22T13:06:29.434Z
     uncompressed: 298691
     url: https://community.simtropolis.com/files/file/4592-peg-oasis-park-v205/
-    version: "1.0"
+    version: '1.0'
 
 meta:
-  timestamp: 2024-11-19T06:11:28.140Z
+  timestamp: 2024-11-26T16:10:02.088Z
