--- a/src/scripts/data/assets/simtropolis/34-cdk-coastal-development-kit.yaml
+++ b/src/scripts/data/assets/simtropolis/34-cdk-coastal-development-kit.yaml
@@ -904,7 +904,7 @@ assets:
     timestamp: 2024-08-15T14:29:31.994Z
     uncompressed: 3641169
     url: https://community.simtropolis.com/files/file/19577-peg-cdk3-sp-container-ship-fleet/
-    version: "101"
+    version: '101'
   simtropolis/19594:
     assetId: simtropolis/19594-peg-cdk3-sp-container-seaport
     authors:
@@ -982,7 +982,7 @@ assets:
     timestamp: 2024-07-24T12:13:33.510Z
     uncompressed: 1674878
     url: https://community.simtropolis.com/files/file/19786-peg-cdk3-sp-rail-fleet/
-    version: "1.0"
+    version: '1.0'
   simtropolis/19803:
     assetId: simtropolis/19803-peg-cdk3-sp-vandy-shipping
     authors:
@@ -1210,4 +1210,4 @@ assets:
     url: https://community.simtropolis.com/files/file/4527-peg-cdk-leveler-v205/
 
 meta:
-  timestamp: 2024-11-19T06:11:28.140Z
+  timestamp: 2024-11-26T16:10:02.088Z
