--- a/src/scripts/data/assets/simtropolis/35-mtp-mountain-theme-pack.yaml
+++ b/src/scripts/data/assets/simtropolis/35-mtp-mountain-theme-pack.yaml
@@ -232,7 +232,7 @@ assets:
     timestamp: 2024-07-24T12:13:33.510Z
     uncompressed: 474140
     url: https://community.simtropolis.com/files/file/14809-peg-mtp-scenic-views/
-    version: "1.0"
+    version: '1.0'
   simtropolis/14810:
     assetId: simtropolis/14810-peg-mtp-sway-bridge
     authors:
@@ -418,7 +418,7 @@ assets:
     timestamp: 2024-08-27T09:21:20.239Z
     uncompressed: 324513
     url: https://community.simtropolis.com/files/file/20895-peg-mtp-mayor-menu-logging-scenes/
-    version: "1.0"
+    version: '1.0'
   simtropolis/20915:
     assetId: simtropolis/20915-peg-mtp-mayor-mode-flora-mod
     authors:
@@ -441,7 +441,7 @@ assets:
     timestamp: 2024-08-27T09:21:20.239Z
     uncompressed: 167030
     url: https://community.simtropolis.com/files/file/20915-peg-mtp-mayor-mode-flora-mod/
-    version: "1.0"
+    version: '1.0'
   simtropolis/20916:
     assetId: simtropolis/20916-peg-mtp-mayor-mode-forest-scenes
     authors:
@@ -465,7 +465,7 @@ assets:
     timestamp: 2024-08-27T09:21:20.239Z
     uncompressed: 314110
     url: https://community.simtropolis.com/files/file/20916-peg-mtp-mayor-mode-forest-scenes/
-    version: "1.0"
+    version: '1.0'
   simtropolis/20918:
     assetId: simtropolis/20918-peg-mtp-fire-station-patch
     authors:
@@ -507,7 +507,7 @@ assets:
     timestamp: 2024-08-27T09:21:20.239Z
     uncompressed: 103987
     url: https://community.simtropolis.com/files/file/20930-peg-mtp-mayor-menu-scrub-brush-mod/
-    version: "1.0"
+    version: '1.0'
   simtropolis/20940:
     assetId: simtropolis/20940-peg-mtp-snow-pine-tree-mod
     authors:
@@ -705,7 +705,7 @@ assets:
     timestamp: 2024-08-27T09:21:20.239Z
     uncompressed: 1179912
     url: https://community.simtropolis.com/files/file/21661-peg-ppond-kit/
-    version: "1.0"
+    version: '1.0'
   simtropolis/21697:
     assetId: simtropolis/21697-peg-ppond-water-mill
     authors:
@@ -777,7 +777,7 @@ assets:
     timestamp: 2024-08-27T09:21:20.239Z
     uncompressed: 870434
     url: https://community.simtropolis.com/files/file/22701-peg-ppond-terrain-props-pack-1/
-    version: "1.0"
+    version: '1.0'
   simtropolis/22719:
     assetId: simtropolis/22719-peg-ppond-fords
     authors:
@@ -1086,4 +1086,4 @@ assets:
     url: https://community.simtropolis.com/files/file/33272-peg-mtp-terrain-mod-2/
 
 meta:
-  timestamp: 2024-11-19T06:11:28.140Z
+  timestamp: 2024-11-26T16:10:02.088Z
