--- a/src/scripts/data/assets/simtropolis/36-spam-simpeg-agricultural-mods.yaml
+++ b/src/scripts/data/assets/simtropolis/36-spam-simpeg-agricultural-mods.yaml
@@ -73,7 +73,7 @@ assets:
     timestamp: 2024-08-15T14:29:31.994Z
     uncompressed: 1196889
     url: https://community.simtropolis.com/files/file/11935-bsc-farm-fields-sg-vol-02/
-    version: "1.0"
+    version: '1.0'
   simtropolis/11936:
     assetId: simtropolis/11936-melonys-melon-farms
     authors:
@@ -135,7 +135,7 @@ assets:
     timestamp: 2024-07-24T12:13:33.510Z
     uncompressed: 7283571
     url: https://community.simtropolis.com/files/file/26079-peg-spam-super-resource-pack/
-    version: "1.0"
+    version: '1.0'
   simtropolis/26084:
     assetId: simtropolis/26084-spam-access-roads-spar
     authors:
@@ -223,7 +223,7 @@ assets:
       - murimk
     category: 36-spam-simpeg-agricultural-mods
     lastModified: 2011-05-11T17:54:57.000Z
-    name: "Murimk Farm Addons for SPAM Vol1: Barns"
+    name: 'Murimk Farm Addons for SPAM Vol1: Barns'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_05_2011/thumb-7db76ee5280d4fe7f4208255f535f9ba-stable_10.jpg
     url: https://community.simtropolis.com/files/file/26190-murimk-farm-addons-for-spam-vol1-barns/
   simtropolis/26191:
@@ -268,7 +268,7 @@ assets:
       - murimk
     category: 36-spam-simpeg-agricultural-mods
     lastModified: 2011-07-09T14:12:07.000Z
-    name: "Murimk Farm Addons for SPAM Vol02: Farmhouses"
+    name: 'Murimk Farm Addons for SPAM Vol02: Farmhouses'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2011/thumb-b3d4b1b0ebdee28fcff29242556c7e51-murimk_farm_addons_for_spam_vol2.jpg
     url: https://community.simtropolis.com/files/file/26474-murimk-farm-addons-for-spam-vol02-farmhouses/
   simtropolis/26477:
@@ -277,7 +277,7 @@ assets:
       - paeng
     category: 36-spam-simpeg-agricultural-mods
     lastModified: 2011-07-09T15:48:32.000Z
-    name: "Paeng's SPAM Addon Pack Vol03: Residentials"
+    name: 'Paeng''s SPAM Addon Pack Vol03: Residentials'
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2011/thumb-e7fcc299c32cf76ba6363dda446aeb58-growables.jpg
     url: https://community.simtropolis.com/files/file/26477-paengs-spam-addon-pack-vol03-residentials/
   simtropolis/27415:
@@ -408,4 +408,4 @@ assets:
     url: https://community.simtropolis.com/files/file/33196-spam-commercial-growable-cs/
 
 meta:
-  timestamp: 2024-11-19T06:11:28.140Z
+  timestamp: 2024-11-26T16:10:02.088Z
