--- a/src/scripts/data/assets/simtropolis/64-simcitypolska-files.yaml
+++ b/src/scripts/data/assets/simtropolis/64-simcitypolska-files.yaml
@@ -1337,7 +1337,7 @@ assets:
     timestamp: 2024-08-27T05:49:08.398Z
     uncompressed: 850107
     url: https://community.simtropolis.com/files/file/28963-ms-solaris-vacanza-12-interurbino-12-automata-props/
-    version: "1.0"
+    version: '1.0'
   simtropolis/28978:
     assetId: simtropolis/28978-ms-pr%C3%B3chnika-8c-warsaw
     authors:
@@ -1436,7 +1436,7 @@ assets:
     timestamp: 2024-08-05T15:22:55.439Z
     uncompressed: 22941705
     url: https://community.simtropolis.com/files/file/33309-polish-mega-props-misc-industrials/
-    version: "1"
+    version: '1'
   simtropolis/33310:
     assetId: simtropolis/33310-mrqs-passanger-railcar-prop-set-wagony-set-01-02
     authors:
@@ -1499,7 +1499,7 @@ assets:
     timestamp: 2024-07-29T09:55:36.596Z
     uncompressed: 10689354
     url: https://community.simtropolis.com/files/file/33497-polish-mega-props-misc-vol01-v2/
-    version: "2.0"
+    version: '2.0'
   simtropolis/34419:
     assetId: simtropolis/34419-lodz-tuwima-by-tao
     authors:
@@ -1629,4 +1629,4 @@ assets:
     url: https://community.simtropolis.com/files/file/36522-jack-polish-high-school-wroclaw/
 
 meta:
-  timestamp: 2024-11-19T06:11:28.140Z
+  timestamp: 2024-11-26T16:10:02.088Z
