--- a/src/scripts/data/assets/simtropolis/73-workingman-productions-wmp.yaml
+++ b/src/scripts/data/assets/simtropolis/73-workingman-productions-wmp.yaml
@@ -47,7 +47,7 @@ assets:
     timestamp: 2024-07-24T12:13:33.510Z
     uncompressed: 6123270
     url: https://community.simtropolis.com/files/file/26171-wmp-the-bridges-of-shoreline-county/
-    version: "2.0"
+    version: '2.0'
   simtropolis/26192:
     assetId: simtropolis/26192-wmp-covered-rail-bridges
     authors:
@@ -323,7 +323,7 @@ assets:
     timestamp: 2024-08-09T11:48:57.739Z
     uncompressed: 1895215
     url: https://community.simtropolis.com/files/file/28015-the-cougar-fruit-packing-ltd/
-    version: "1.0"
+    version: '1.0'
   simtropolis/33620:
     assetId: simtropolis/33620-wmp-essentials-v101
     authors:
@@ -576,4 +576,4 @@ assets:
     url: https://community.simtropolis.com/files/file/33653-wmp-causeway-tutorial/
 
 meta:
-  timestamp: 2024-11-19T06:11:28.140Z
+  timestamp: 2024-11-26T16:10:02.088Z
