--- a/src/scripts/data/assets/simtropolis/32-simpeg-plex-files.yaml
+++ b/src/scripts/data/assets/simtropolis/32-simpeg-plex-files.yaml
@@ -22,7 +22,7 @@ assets:
     timestamp: 2024-07-24T12:13:33.510Z
     uncompressed: 407399
     url: https://community.simtropolis.com/files/file/19338-peg-security-fencing-kit/
-    version: "1.0"
+    version: '1.0'
   simtropolis/19880:
     assetId: simtropolis/19880-peg-cdk3-super-pak
     authors:
@@ -46,7 +46,7 @@ assets:
     timestamp: 2024-08-06T13:57:29.522Z
     uncompressed: 6021491
     url: https://community.simtropolis.com/files/file/19880-peg-cdk3-super-pak/
-    version: "1.0"
+    version: '1.0'
   simtropolis/19881:
     assetId: simtropolis/19881-peg-cdk3-sp-seaport-super-pak
     authors:
@@ -163,7 +163,7 @@ assets:
     timestamp: 2024-08-15T14:29:31.994Z
     uncompressed: 9883193
     url: https://community.simtropolis.com/files/file/26080-simpeg-agricultural-mod-spam/
-    version: "1.0"
+    version: '1.0'
   simtropolis/27711:
     assetId: simtropolis/27711-peg-one-flag-many-nations-mod
     authors:
@@ -206,7 +206,7 @@ assets:
     timestamp: 2024-08-15T14:29:31.994Z
     uncompressed: 90556
     url: https://community.simtropolis.com/files/file/27711-peg-one-flag-many-nations-mod/
-    version: "1.0"
+    version: '1.0'
   simtropolis/27712:
     assetId: simtropolis/27712-the-peg-terrain-kit-7-n-1
     authors:
@@ -263,7 +263,7 @@ assets:
     timestamp: 2024-08-27T09:21:20.239Z
     uncompressed: 3116291
     url: https://community.simtropolis.com/files/file/27712-the-peg-terrain-kit-7-n-1/
-    version: "1.0"
+    version: '1.0'
   simtropolis/30648:
     assetId: simtropolis/30648-peg-cdk-tutorial
     authors:
@@ -275,4 +275,4 @@ assets:
     url: https://community.simtropolis.com/files/file/30648-peg-cdk-tutorial/
 
 meta:
-  timestamp: 2024-11-19T06:11:28.140Z
+  timestamp: 2024-11-26T16:10:02.088Z
