--- a/src/scripts/data/assets/sc4evermore/20-ploppable.yaml
+++ b/src/scripts/data/assets/sc4evermore/20-ploppable.yaml
@@ -5,161 +5,247 @@ assets:
       - Jeronij
     buildings:
       - bulldoze: 5
+        category: landmarks
         cost: 7
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Blue/JRJ Toyama3 blue Full_30c05b68.SC4Lot
         id: 30c05b68
         maintenance: 1
+        menu: Landmarks
         model: 5ad0e817-badb57f1-0e110000
+        name: JRJ Toyama3 Blue Full
         pollution: -5
         pollutionRadius: 3
         rating: 10
         ratingRadius: 256
+        relief:
+          r$: 250
+          r$$: 250
+          r$$$: 250
         water: 5
         waterPollution: 1
         waterPollutionRadius: 1
       - bulldoze: 5
+        category: landmarks
         cost: 7
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Blue/JRJ Toyama3 blue_d0bf13e3.SC4Lot
         id: d0bf13e3
         maintenance: 1
+        menu: Landmarks
         model: 5ad0e817-badb57f1-0e110000
+        name: JRJ Toyama3 Blue
         pollution: -5
         pollutionRadius: 3
         rating: 10
         ratingRadius: 256
+        relief:
+          r$: 250
+          r$$: 250
+          r$$$: 250
         water: 5
         waterPollution: 1
         waterPollutionRadius: 1
       - bulldoze: 5
+        category: landmarks
         cost: 7
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Green/JRJ Toyama3 Green Full_30c052e8.SC4Lot
         id: 30c052e8
         maintenance: 1
+        menu: Landmarks
         model: 5ad0e817-badb57f1-0e110000
+        name: JRJ Toyama3 Green Full
         pollution: -5
         pollutionRadius: 3
         rating: 10
         ratingRadius: 256
+        relief:
+          r$: 250
+          r$$: 250
+          r$$$: 250
         water: 5
         waterPollution: 1
         waterPollutionRadius: 1
       - bulldoze: 5
+        category: landmarks
         cost: 7
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Green/JRJ Toyama3 Green_f0bf0dab.SC4Lot
         id: f0bf0dab
         maintenance: 1
+        menu: Landmarks
         model: 5ad0e817-badb57f1-0e110000
+        name: JRJ Toyama3 Green
         pollution: -5
         pollutionRadius: 3
         rating: 10
         ratingRadius: 256
+        relief:
+          r$: 250
+          r$$: 250
+          r$$$: 250
         water: 5
         waterPollution: 1
         waterPollutionRadius: 1
       - bulldoze: 5
+        category: landmarks
         cost: 7
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Red/JRJ Toyama3 red Full_d0c05314.SC4Lot
         id: d0c05314
         maintenance: 1
+        menu: Landmarks
         model: 5ad0e817-badb57f1-0e110000
+        name: JRJ Toyama3 Red Full
         pollution: -5
         pollutionRadius: 3
         rating: 10
         ratingRadius: 256
+        relief:
+          r$: 250
+          r$$: 250
+          r$$$: 250
         water: 5
         waterPollution: 1
         waterPollutionRadius: 1
       - bulldoze: 5
+        category: landmarks
         cost: 7
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Red/JRJ Toyama3 red_d0bf0a44.SC4Lot
         id: d0bf0a44
         maintenance: 1
+        menu: Landmarks
         model: 5ad0e817-badb57f1-0e110000
+        name: JRJ Toyama3 Red
         pollution: -5
         pollutionRadius: 3
         rating: 10
         ratingRadius: 256
+        relief:
+          r$: 250
+          r$$: 250
+          r$$$: 250
         water: 5
         waterPollution: 1
         waterPollutionRadius: 1
       - bulldoze: 5
+        category: landmarks
         cost: 7
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Yellow/JRJ Toyama3 yellow Full_f0c045df.SC4Lot
         id: f0c045df
         maintenance: 1
+        menu: Landmarks
         model: 5ad0e817-badb57f1-0e110000
+        name: JRJ Toyama3 Yellow Full
         pollution: -5
         pollutionRadius: 3
         rating: 10
         ratingRadius: 256
+        relief:
+          r$: 250
+          r$$: 250
+          r$$$: 250
         water: 5
         waterPollution: 1
         waterPollutionRadius: 1
       - bulldoze: 5
+        category: landmarks
         cost: 7
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Yellow/JRJ Toyama3 yellow_d0bf0413.SC4Lot
         id: d0bf0413
         maintenance: 1
+        menu: Landmarks
         model: 5ad0e817-badb57f1-0e110000
+        name: JRJ Toyama3 Yellow
         pollution: -5
         pollutionRadius: 3
         rating: 10
         ratingRadius: 256
+        relief:
+          r$: 250
+          r$$: 250
+          r$$$: 250
         water: 5
         waterPollution: 1
         waterPollutionRadius: 1
       - bulldoze: 5
+        category: landmarks
         cost: 7
         filename: Jeronij/JRJ Ships Compilation/Juan J. Sister/JRJ Sister_90be0bd3.SC4Lot
         id: 90be0bd3
         maintenance: 1
+        menu: Landmarks
         model: 5ad0e817-badb57f1-0e110000
+        name: JRJ Sister
         pollution: -5
         pollutionRadius: 3
         rating: 10
         ratingRadius: 256
+        relief:
+          r$: 250
+          r$$: 250
+          r$$$: 250
         water: 5
         waterPollution: 1
         waterPollutionRadius: 1
       - bulldoze: 5
-        cost: 7
-        filename: Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd01_90c1db9e.SC4Lot
-        id: 90c1db9e
-        maintenance: 1
-        model: 5ad0e817-badb57f1-0e110000
-        pollution: -5
-        pollutionRadius: 3
-        rating: 10
-        ratingRadius: 256
-        water: 5
-        waterPollution: 1
-        waterPollutionRadius: 1
-      - bulldoze: 5
-        cost: 7
-        filename: Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd02_90c204fd.SC4Lot
-        id: 90c204fd
-        maintenance: 1
-        model: 5ad0e817-badb57f1-0e110000
-        pollution: -5
-        pollutionRadius: 3
-        rating: 10
-        ratingRadius: 256
-        water: 5
-        waterPollution: 1
-        waterPollutionRadius: 1
-      - bulldoze: 5
+        category: landmarks
         cost: 7
         filename: Jeronij/JRJ Ships Compilation/RMS Titanic/JRJ Titanic_70b5cb20.SC4Lot
         id: 70b5cb20
         maintenance: 1
+        menu: Landmarks
         model: 5ad0e817-badb57f1-0e110000
+        name: JRJ Titanic
         pollution: -5
         pollutionRadius: 3
         rating: 10
         ratingRadius: 256
+        relief:
+          r$: 250
+          r$$: 250
+          r$$$: 250
         water: 5
         waterPollution: 1
         waterPollutionRadius: 1
+      - bulldoze: 5
+        category: landmarks
+        cost: 7
+        filename: Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd01_90c1db9e.SC4Lot
+        id: 90c1db9e
+        maintenance: 1
+        menu: Landmarks
+        model: 5ad0e817-badb57f1-0e110000
+        name: JRJ Ned Lloyd
+        pollution: -5
+        pollutionRadius: 3
+        rating: 10
+        ratingRadius: 256
+        relief:
+          r$: 250
+          r$$: 250
+          r$$$: 250
+        water: 5
+        waterPollution: 1
+        waterPollutionRadius: 1
+      - bulldoze: 5
+        category: landmarks
+        cost: 7
+        filename: Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd02_90c204fd.SC4Lot
+        id: 90c204fd
+        maintenance: 1
+        menu: Landmarks
+        model: 5ad0e817-badb57f1-0e110000
+        name: JRJ Ned Lloyd Full
+        pollution: -5
+        pollutionRadius: 3
+        rating: 10
+        ratingRadius: 256
+        relief:
+          r$: 250
+          r$$: 250
+          r$$$: 250
+        water: 5
+        waterPollution: 1
+        waterPollutionRadius: 1
+    categories:
+      - landmarks
     category: 20-ploppable
     dependencies: []
     description: "<body>\r\n        <div class=\"jd_description_wrapper jd_clear\"><p><span style=\"font-family: Arial, Helvetica, sans-serif;\">These are all water plopable landmarks which include mostly two versions of cargo ships (loaded and unloaded) like the\_Ned Lloyd\_and the\_Maritime Toyoma\_cargo ships in different colour variation.\_</span><span style=\"font-family: Arial, Helvetica, sans-serif;\">Useful for industrial harbour areas.</span><span style=\"font-family: Arial, Helvetica, sans-serif;\">\_The compilation also contains the</span>\_Spanish\_passenger ferry ship\_Juan J. Sister\_and the\_Harland &amp; Wolff RMS Titanic.</p>\r\n<p>These models are based on real life ships, for the cargo ships there are two versions included, one with a full container cargo, and the other one empty. The ships are to scale. Be advised !!!</p>\r\n<p>Before installing the modpack read the readme contained in the <em><strong>~Documents</strong></em> folder and run the <strong>cleanitol</strong> file to have a clean installation of the mods.</p>\r\n<p><span style=\"text-decoration: underline;\">Installation</span>: Copy/extract the <strong>BSC </strong>and the <strong>Jeronij </strong>parent folders into your plugins. If you extracted the <em>_Documents</em> folder into your plugins, too, it's highly recommended to keep it, but move it out of the Plugins folder<span style=\"font-family: Arial, Helvetica, sans-serif;\">.</span></p>\r\n<p><strong><span style=\"font-family: Arial, Helvetica, sans-serif;\">Dependencies:</span></strong></p>\r\n<p><span style=\"font-family: Arial, Helvetica, sans-serif;\">BSC MEGA Props - JRJ Vol01 v2.dat - INCLUDED (you can find it in the BSC/BSCProps folder).</span></p> </div>\r\n        <div class=\"jd_preview\" style=\"\"></div>\r\n        <div class=\"jd_preview\" style=\"\"></div>\r\n        <div class=\"jd_screenshot_zone jd_clear\" style=\"\">\r\n            <span class=\"jd_screenshot\"><a href=\"https://www.sc4evermore.com/images/jdownloads/screenshots/JRJ_Ships_JJSister.jpg\" data-lightbox=\"lightbox165\" data-alt=\"lightboxJRJ_Ships_JJSister.jpg|JRJ_Ships_Titanic.jpg|JRJ_Ships_Toyama_blue\" target=\"_blank\"><img class=\"jd_image-left\" src=\"https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/JRJ_Ships_JJSister.jpg\" alt=\"JRJ_Ships_JJSister\" ></a> </span>\r\n            <span class=\"jd_screenshot\"><a href=\"https://www.sc4evermore.com/images/jdownloads/screenshots/JRJ_Ships_Titanic.jpg\" data-lightbox=\"lightbox165\" data-alt=\"lightboxJRJ_Ships_JJSister.jpg|JRJ_Ships_Titanic.jpg|JRJ_Ships_Toyama_blue\" target=\"_blank\"><img class=\"jd_image-left\" src=\"https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/JRJ_Ships_Titanic.jpg\" alt=\"JRJ_Ships_Titanic2\" ></a> </span>\r\n            <span class=\"jd_screenshot\"><a href=\"https://www.sc4evermore.com/images/jdownloads/screenshots/JRJ_Ships_Toyama_blue.jpg\" data-lightbox=\"lightbox165\" data-alt=\"lightboxJRJ_Ships_JJSister.jpg|JRJ_Ships_Titanic.jpg|JRJ_Ships_Toyama_blue\" target=\"_blank\"><img class=\"jd_image-left\" src=\"https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/JRJ_Ships_Toyama_blue.jpg\" alt=\"JRJ_Ships_Toyama_blue3\" ></a> </span>\r\n        </div> \r\n</body>"
@@ -175,9 +261,9 @@ assets:
       - Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Yellow/JRJ Toyama3 yellow Full_f0c045df.SC4Lot
       - Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Yellow/JRJ Toyama3 yellow_d0bf0413.SC4Lot
       - Jeronij/JRJ Ships Compilation/Juan J. Sister/JRJ Sister_90be0bd3.SC4Lot
+      - Jeronij/JRJ Ships Compilation/RMS Titanic/JRJ Titanic_70b5cb20.SC4Lot
       - Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd01_90c1db9e.SC4Lot
       - Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd02_90c204fd.SC4Lot
-      - Jeronij/JRJ Ships Compilation/RMS Titanic/JRJ Titanic_70b5cb20.SC4Lot
       - ~Documents/Jeronij_Readmes/images/JRJ_Ships_JJSister.jpg
       - ~Documents/Jeronij_Readmes/images/JRJ_Ships_NedLloyd.jpg
       - ~Documents/Jeronij_Readmes/images/JRJ_Ships_Titanic.jpg
@@ -187,9 +273,9 @@ assets:
       - ~Documents/Jeronij_Readmes/images/JRJ_Ships_Toyama_yellow.jpg
       - ~Documents/Jeronij_Readmes/images/Logo_eurobold_204x20.jpg
       - BSC/BSCProps/BSC MEGA Props - JRJ Vol01 v2.dat
-      - ~Documents/Jeronij_Readmes/JRJ_Ships_Ned_Lloyd_readme.html
       - ~Documents/Prop-Texture Catalogue Index and Cleanitol/BSC MEGA Props - JRJ Vol01 v2-index.jpg
       - ~Documents/Prop-Texture Catalogue Index and Cleanitol/Cleanitol_JRJ Ships Compilation.txt
+      - ~Documents/Jeronij_Readmes/JRJ_Ships_Ned_Lloyd_readme.html
     images:
       - https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/JRJ_Ships_JJSister.jpg
       - https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/JRJ_Ships_Titanic.jpg
@@ -197,7 +283,6 @@ assets:
     lastModified: 2023-11-11T16:29:27.000Z
     lots:
       - building: 30c05b68
-        category: landmarks
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Blue/JRJ Toyama3 blue Full_30c05b68.SC4Lot
         id: 30c05b68
         name: JRJ Toyama3 blue Full
@@ -207,7 +292,6 @@ assets:
         textures:
           - 25f40000
       - building: d0bf13e3
-        category: landmarks
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Blue/JRJ Toyama3 blue_d0bf13e3.SC4Lot
         id: d0bf13e3
         name: JRJ Toyama3 blue
@@ -217,7 +301,6 @@ assets:
         textures:
           - 25f40000
       - building: 30c052e8
-        category: landmarks
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Green/JRJ Toyama3 Green Full_30c052e8.SC4Lot
         id: 30c052e8
         name: JRJ Toyama3 Green Full
@@ -227,7 +310,6 @@ assets:
         textures:
           - 25f40000
       - building: f0bf0dab
-        category: landmarks
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Green/JRJ Toyama3 Green_f0bf0dab.SC4Lot
         id: f0bf0dab
         name: JRJ Toyama3 Green
@@ -237,7 +319,6 @@ assets:
         textures:
           - 25f40000
       - building: d0c05314
-        category: landmarks
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Red/JRJ Toyama3 red Full_d0c05314.SC4Lot
         id: d0c05314
         name: JRJ Toyama3 red Full
@@ -247,7 +328,6 @@ assets:
         textures:
           - 25f40000
       - building: d0bf0a44
-        category: landmarks
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Red/JRJ Toyama3 red_d0bf0a44.SC4Lot
         id: d0bf0a44
         name: JRJ Toyama3 red
@@ -257,7 +337,6 @@ assets:
         textures:
           - 25f40000
       - building: f0c045df
-        category: landmarks
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Yellow/JRJ Toyama3 yellow Full_f0c045df.SC4Lot
         id: f0c045df
         name: JRJ Toyama3 yellow Full
@@ -267,7 +346,6 @@ assets:
         textures:
           - 25f40000
       - building: d0bf0413
-        category: landmarks
         filename: Jeronij/JRJ Ships Compilation/JRJ Maritime Toyama Yellow/JRJ Toyama3 yellow_d0bf0413.SC4Lot
         id: d0bf0413
         name: JRJ Toyama3 yellow
@@ -277,7 +355,6 @@ assets:
         textures:
           - 25f40000
       - building: 90be0bd3
-        category: landmarks
         filename: Jeronij/JRJ Ships Compilation/Juan J. Sister/JRJ Sister_90be0bd3.SC4Lot
         id: 90be0bd3
         name: JRJ Sister
@@ -286,8 +363,14 @@ assets:
         size: 3x1
         textures:
           - 25f40000
+      - building: 70b5cb20
+        filename: Jeronij/JRJ Ships Compilation/RMS Titanic/JRJ Titanic_70b5cb20.SC4Lot
+        id: 70b5cb20
+        name: JRJ Titanic
+        props:
+          - 70b5ca2f
+        size: 1x1
       - building: 90c1db9e
-        category: landmarks
         filename: Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd01_90c1db9e.SC4Lot
         id: 90c1db9e
         name: JRJ Nedlloyd01
@@ -297,7 +380,6 @@ assets:
         textures:
           - 25f40000
       - building: 90c204fd
-        category: landmarks
         filename: Jeronij/JRJ Ships Compilation/Ned Lloyd/JRJ Nedlloyd02_90c204fd.SC4Lot
         id: 90c204fd
         name: JRJ Nedlloyd02
@@ -306,16 +388,8 @@ assets:
         size: 5x1
         textures:
           - 25f40000
-      - building: 70b5cb20
-        category: landmarks
-        filename: Jeronij/JRJ Ships Compilation/RMS Titanic/JRJ Titanic_70b5cb20.SC4Lot
-        id: 70b5cb20
-        name: JRJ Titanic
-        props:
-          - 70b5ca2f
-        size: 1x1
     meta:
-      timestamp: 2024-11-18T14:36:08.234Z
+      timestamp: 2024-11-26T21:04:04.961Z
       version: 1
     models:
       - 5ad0e817-93510e0f-00030000
